--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,15 @@ dependencies {
    compile  'log4j:log4j:1.2.16'
    compile files('sqlite-jdbc-3.21.0.jar', 'opencsv-4.1.jar', 'jsr173_api-1.0.jar',
    'jfxrt.jar', 'jaxb-impl-2.1.17.jar', 'JavaAPIforKml-2.2.0.jar', 'commons-lang3-3.7.jar')
-   //compile fileTree(dir: 'javaapiforkml-master', includes: ['*.jar'])
 } 
 
 task fatJar(type: Jar) {
 	manifest {
-        attributes 'Implementation-Title': 'Gradle Jar File Example',
+        attributes 'Implementation-Title': 'Gradle Jar',
         	'Implementation-Version': version,
         	'Main-Class': 'ui.MainGUI'
     }
-    baseName = project.name + '-all'
+    baseName = project.name
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
@@ -41,3 +40,9 @@ task javadocJar(type: Jar, dependsOn: 'javadoc') {
 artifacts {
     archives javadocJar
 }
+
+// cleans files after clean task is finished.
+clean.doLast {
+    file('OOP1/build').deleteDir()
+}
+
